# evidencegene-court

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ACCURACY_REPORT.md  ARCHITECTURE.md  ATLAS_MAPPING.md  DATASET.md  REDTEAM_REPORT.md  TRY_IT_OUT.md
docs/reviews/: 2026-06-13-v0.2-staff-review.md
docs/submission/: demo-video-script.md  devpost-story.md  report.html
docs/submission/sample-run/: audit_chain.jsonl  findings.jsonl
docs/submission/sample-run-7b/: findings.jsonl
reports/cmp7b/: audit_chain.jsonl
reports/jury/: audit.jsonl  findings.jsonl
scripts/: demo.sh  fetch_case001.sh  make_fixture.py  record_demo.py
src/evidencegene/: __init__.py  config.py  fixture.py
src/evidencegene/analysis/: __init__.py  ablation.py
src/evidencegene/artifacts/: __init__.py  store.py
src/evidencegene/attestation/: __init__.py  models.py  serializer.py
src/evidencegene/court/: agents.py  binding.py  cli.py  jury.py  llm.py  orchestrator.py
src/evidencegene/redteam/: __init__.py  harness.py  payloads.py  report.py
src/evidencegene/report/: __init__.py  render.py  timeline.py
src/evidencegene/tools/: forensics.py  runner.py  server.py
tests/: test_ablation.py  test_attestation.py  test_binding.py  test_jury.py  test_redteam.py  test_report.py
