[project]
name = "evidencegene"
version = "0.1.0"
description = "EvidenceGene Court — adversarial autonomous DFIR agent swarm with architectural anti-hallucination guardrails, built on SANS SIFT tooling (FIND EVIL! hackathon 2026)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Aleksandr Mordvinov" }]
dependencies = [
    "mcp>=1.12",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
forensics = [
    "volatility3>=2.8",
]
ui = [
    "streamlit>=1.38",
]
submission = [
    "pillow>=10.4",
]

[project.scripts]
egc-mcp = "evidencegene.tools.server:main"
egc-court = "evidencegene.court.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidencegene"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
